--- a/www/index.html
+++ b/www/index.html
@@ -22,22 +22,21 @@
   <body ng-app="todo" ng-controller="TodoCtrl">
   <side-menus>
 
-      <!-- Center content -->
+    <!-- Center content -->
     <pane side-menu-content>
       <header class="bar bar-header bar-dark">
-      <h1 class="title">Todo</h1>
-      <!-- New Task button-->
-      <button class="button button-icon" ng-click="editTasks()">
-        <i class="icon ion-edit"></i>
-      </button>
-      <button class="button button-icon" ng-click="newTask()">
-        <i class="icon ion-compose"></i>
-      </button>
-    </header>
-    <content has-header="true">
-        <!-- our list and list items -->
+        <button class="button button-icon" ng-click="toggleProjects()">
+          <i class="icon ion-navicon"></i>
+        </button>
+        <h1 class="title">{{activeProject.title}}</h1>
+        <!-- New Task button-->
+        <button class="button button-clear" ng-click="newTask()">
+          New
+        </button>
+      </header>
+      <content has-header="true" scroll="false">
         <list>
-          <item ng-repeat="task in tasks">
+          <item ng-repeat="task in activeProject.tasks">
             {{task.title}}
           </item>
         </list>
@@ -45,11 +44,21 @@
     </pane>
 
     <!-- Left menu -->
-    <side-menu side="left">
-      <header class="bar bar-header bar-dark">
-        <h1 class="title">Projects</h1>
-      </header>
-    </side-menu>
+      <side-menu side="left">
+        <header class="bar bar-header bar-dark">
+          <h1 class="title">Projects</h1>
+          <button class="button button-icon" ng-click="newProject()">
+            <i class="ion ion-plus"></i>
+          </button>
+        </header>
+        <content has-header="true" scroll="false">
+          <list>
+            <item ng-repeat="project in projects" ng-click="selectProject(project)" ng-class="{active: activeProject == project}">
+              {{project.title}}
+            </item>
+          </list>
+        </content>
+      </side-menu>
 
   </side-menus>
   <script id="new-task.html" type="text/ng-template">
